--- a/newcss.css
+++ b/newcss.css
@@ -13,6 +13,7 @@ body {
   font-weight: 500;
   font-size: 25px !important;
   line-height: 30px !important;
+  margin-right: 0;
 }
 .div-nav{
   position: absolute;
@@ -72,7 +73,9 @@ body {
   line-height: 30px;
   text-decoration: none;
 }
-
+.head_title{
+  padding-top: 30px;
+}
 .pg-headline {
   max-width: 1100px;
   padding-bottom: 24px;
@@ -110,6 +113,7 @@ body {
 }
 
 .pic__text__block {
+  margin-top: 30px;
   display: flex;
 }
 
@@ -120,7 +124,7 @@ body {
 }
 
 .paragraph__doc {
-  /* zoom: .95; */
+  margin-top: -0.5%;
   width: 694px;
 }
 .do-posle{
@@ -164,23 +168,31 @@ body {
 }
 
 .paragraph__do-posle {
-  margin-top: 60px;
+  margin-top: 30px;
   zoom: .95;
   margin-bottom: 40px;
 }
 
 .pen-title {
   margin-top: 41px;
+  width: 100%!important;
 }
 
 .chlen__item {
   display: flex;
   gap: 30px;
-  border-bottom: 7px solid rgb(230, 230, 230);
+  /* border-bottom: 7px solid rgb(230, 230, 230); */
   padding: 15px;
   padding-left: 0;
 }
-
+hr {
+  border: none; /* Убираем границу */
+  background-color: rgb(230, 230, 230); /* Цвет линии */
+  color: rgb(230, 230, 230); /* Цвет линии для IE6-7 */
+  height: 7px; /* Толщина линии */
+  width: 110%;
+  margin-left: -3%;
+  }
 .chlen__data-block {
   display: flex;
   flex-direction: column;
@@ -245,6 +257,7 @@ body {
   gap: 17px;
 }
 
+
 .sex-gif_end {
   width: 470px !important;
   height: 384px !important;
@@ -253,6 +266,12 @@ body {
 .end-title {
   margin-top: 35px;
   max-width: 1280px;
+}
+
+.paragraph__end{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
 }
 
 
@@ -268,7 +287,7 @@ body {
 }
 
 .zakaz__btn {
-  width: 470px;
+  width: 570px;
   height: 60px;
   background-color: #C00000;
   border-radius: 60px;
@@ -279,7 +298,8 @@ body {
 .zakaz__btn span {
   display: flex;
   justify-content: center;
-  padding-top: 3.3%;
+  align-items: center;
+  padding-top: 3%;
   color: #fff;
 
 }
@@ -292,6 +312,9 @@ body {
   padding-right: 5px;
   padding-left: 5px;
   color: #FFFFFF;
+}
+.hidden-red{
+  display: none;
 }
 
 /* ---------------------------------------------- */
@@ -313,13 +336,17 @@ body {
   body{
     zoom: .8;
   }
-  .chlen__item {
+  h1, h2{
+    font-size: 2.46667rem!important;
+    line-height: 1.13636!important;
+  }
+  /* .chlen__item {
     flex-direction: column;
     align-items: center;
   }
   .chlen__item img{
     max-width: 500px;
-  }
+  } */
   .sex__gif{
     display: flex;
     gap: 10px;
