--- a/newcss.css
+++ b/newcss.css
@@ -87,11 +87,16 @@ body {
 }
 
 .el__storyelement__title1 {
-  max-width: 1100px;
+  line-height: 20px;
 }
 
+/* .gif__box{
+  display: flex;
+  justify-content: center;
+  
+} */
 .media__gif {
-  width: 1280px;
+  width: 1000px;
   height: 100%;
 }
 
@@ -134,7 +139,7 @@ body {
 
 .img__box__do-posle {
   display: flex;
-  gap: 44px;
+  justify-content: space-between;
   width: 1280px;
 }
 
@@ -165,7 +170,7 @@ body {
 }
 
 .img__do-posle {
-  zoom: .9;
+  zoom: 1.1;
 }
 
 .paragraph__do-posle {
