--- a/newcss.css
+++ b/newcss.css
@@ -10,6 +10,7 @@ body {
   overflow-x:hidden;
 }
 
+
 .zn-body__paragraph {
   font-weight: 500;
   font-size: 25px !important;
@@ -28,6 +29,16 @@ body {
   width: 1310px;
   margin: 0 auto;
 }
+.btn_menu{
+
+}
+.btn_audio{
+  margin-left: 55%;
+}
+.btn_ser{
+
+}
+
 
 .div_line {
   border-bottom: 1px solid rgb(230, 230, 230);
@@ -242,11 +253,12 @@ hr {
 
 .sostav {
   display: flex;
+  justify-content: space-between;
   background-color: rgba(57, 181, 74, 1);
   padding-left: 30px;
   width: 1280px;
   margin-left: -15px;
-  height: 430px;
+  height: 100%;
   padding-top: 1px;
   gap: 70px;
 }
@@ -265,8 +277,8 @@ hr {
   display: flex;
   flex-direction: column;
   gap: 17px;
+  margin-bottom: 25px;
 }
-
 
 .sex-gif_end {
   width: 470px !important;
@@ -334,64 +346,69 @@ hr {
 /* ===================== 1200 =================== */
 @media(max-width: 1200px) {
   
-  body{
-    zoom: .9;
-  }
   
 }
 
 /* ===================== 992 ===================== */
 @media(max-width: 993px){
-  body{
-    zoom: .8;
-  }
+  
   h1, h2{
     font-size: 2.46667rem!important;
     line-height: 1.13636!important;
   }
-  /* .chlen__item {
-    flex-direction: column;
-    align-items: center;
-  }
-  .chlen__item img{
-    max-width: 500px;
-  } */
   .sex__gif{
     display: flex;
     gap: 10px;
     flex-direction: column;
     align-items: center;
-  }
-  .sex__gif img{
-    max-width: 500px;
+    zoom: 1.3;
   }
   .nat__img{
     display: none;
   }
 }
+@media(max-width: 870px){
+  body{
+    zoom: .7;
+  }
+  
+  .img__box__do-posle {
+    gap: 20px;
+    flex-direction: column;
+  }
+}
 
 /* ===================== 768 ===================== */
 @media(max-width: 769px){
+  
   body{
     zoom: .6;
+  }
+  ::-webkit-scrollbar { width: 0;}
+  /* .l-container::-webkit-scrollbar { width: 0 !important } */
+  .l-container{
+    overflow-x: hidden;
+  }
+  .div-nav{
+    display: none;
+  }
+  #nav{
+    margin: 0;
+    width: 1275px;
+  }
+  .nav--plain-header{
+    width: 1275px;
+  }
+  .sostav{
+    width: 100%;
   }
 }
 
 /* ===================== 600 ===================== */
 @media(max-width: 600px){
   body{
-    zoom: .5;
+    zoom: .9;
   }
-}
-
-/* ===================== 500 ===================== */
-@media(max-width: 500px){
-  body{
-    zoom: .7;
-  }
-  /* .media__image_doc{
-    zoom: 1.2;
-  } */
   .pic__text__block{
     flex-direction: column;
   }
@@ -402,7 +419,7 @@ hr {
     margin-left: 0;
   }
   .media__gif{
-    width: 630px;
+    width: 430px;
   }
   .img__box__do-posle {
     gap: 20px;
@@ -444,6 +461,18 @@ hr {
   .sostav{
     width: 100%;
   }
+  .sostav-title{
+    width: 600px;
+  }
+  
+}
+
+/* ===================== 500 ===================== */
+@media(max-width: 500px){
+  body{
+    zoom: .7;
+  }
+  
 }
 
 /* ===================== 320 ===================== */
