--- a/newcss.css
+++ b/newcss.css
@@ -369,10 +369,13 @@ hr {
     zoom: 1.3;
   }
   .sostav{
-    flex-direction: column;
+    position: relative;
   }
   .nat__img{
-    margin-top: -90px;
+    zoom: .8;
+    position: absolute;
+    right: 0;
+    bottom: 0;
   }
 }
 @media(max-width: 870px){
@@ -424,25 +427,25 @@ hr {
     zoom: 1.1;
   }
   .speakable{
-    zoom: 1.2;
+    zoom: 1.1;
   }
   .pic__text__block{
     flex-direction: column;
   }
   .paragraph__doc{
-    zoom: 1.2;
+    zoom: 1.1;
     margin-top: 30px;
   }
   .zakaz__pic{
     margin-left: 0;
   }
   .media__gif{
-    width: 430px;
+    width: 530px;
   }
   .img__box__do-posle {
     gap: 20px;
     flex-direction: column;
-    zoom: 1.15;
+    zoom: 1.1;
   }
   .text__pos__do-posle{
     bottom: 3%;
@@ -462,7 +465,7 @@ hr {
     flex-direction: column;
   }
   .chlen__data-block{
-    zoom: 1.2;
+    zoom: 1.1;
   }
   .sex__gif{
     zoom: 1.3;
@@ -471,9 +474,10 @@ hr {
     flex-direction: column;
   }
   .inch__item{
-    padding-top: -3px;
+    padding-top: 0;
     font-size: 60px;
     line-height: 80px;
+    padding-bottom: 4px;
   }
   .text__box__do-posle {
     zoom: .8;
@@ -486,6 +490,9 @@ hr {
   }
   .sostav-title{
     width: 600px;
+  }
+  .sostav__text{
+    width: 300px;
   }
   #popup{
     zoom: .8;
