--- a/newcss.css
+++ b/newcss.css
@@ -138,6 +138,7 @@ body {
   width: 497px !important;
   height: 470px !important;
   margin-right: 30px;
+  margin-bottom: 30px;
 }
 
 .paragraph__doc1 {
@@ -220,12 +221,8 @@ hr {
 .chlen__data-block {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 20px;
   margin-right: 30px;
-}
-
-.btnDelay {
-  margin-top: 27px;
 }
 
 .sex-title {
@@ -291,6 +288,9 @@ hr {
 .sex-gif_end {
   width: 470px !important;
   height: 384px !important;
+}
+.flex_block{
+  gap: 0;
 }
 
 .end-title {
@@ -504,7 +504,10 @@ hr {
     zoom: .8;
   }
   .end-title{
-    zoom: 1.1;
+    zoom: 1.3;
+  }
+  .paragraph__doc3{
+    margin-bottom: 0;
   }
 }
 
